[gd_scene load_steps=25 format=3 uid="uid://dar4br7dc2s5k"]

[ext_resource type="PackedScene" uid="uid://736vyekiw1iy" path="res://Player/player.tscn" id="1_ivq1u"]
[ext_resource type="Script" path="res://game.gd" id="1_obbnp"]
[ext_resource type="AudioStream" uid="uid://co3qew71buxpt" path="res://Audio/background_music.mp3" id="2_rw7ox"]
[ext_resource type="AudioStream" uid="uid://ckwqyb1jpprao" path="res://Audio/death_sound.mp3" id="3_7xd05"]
[ext_resource type="AudioStream" uid="uid://cc7arefj6i4h0" path="res://Audio/score_up_sound.mp3" id="3_p1ixt"]
[ext_resource type="Script" path="res://Game/spawner.gd" id="3_rhkor"]
[ext_resource type="Script" path="res://Game/healthbar.gd" id="4_7h0ba"]
[ext_resource type="AudioStream" uid="uid://cvsfdgl223bqk" path="res://Audio/wrong_sound.mp3" id="4_aoobe"]
[ext_resource type="AudioStream" uid="uid://dwpqeusgfyd1s" path="res://Audio/attack_sound.mp3" id="5_m5cty"]
[ext_resource type="AudioStream" uid="uid://dd8xn23nmtknq" path="res://Audio/bomb_sound.mp3" id="7_kg4gt"]
[ext_resource type="AudioStream" uid="uid://6bxvuci2dgci" path="res://Audio/magnet_sound.mp3" id="8_8ufed"]
[ext_resource type="AudioStream" uid="uid://btf36n6a1woi" path="res://Audio/jump_sound.mp3" id="9_gtxke"]
[ext_resource type="Texture2D" uid="uid://c2p6fkg10ns8r" path="res://Logo/utb.png" id="9_ufqww"]
[ext_resource type="AudioStream" uid="uid://o1kwbhhmkent" path="res://Audio/powerup_collected_sound.mp3" id="10_8kg18"]
[ext_resource type="AudioStream" uid="uid://cc0y04smltul3" path="res://Audio/pop_sound.mp3" id="11_iryfq"]
[ext_resource type="Texture2D" uid="uid://fi73v4jk2g47" path="res://Heart/heart.png" id="11_pg71m"]
[ext_resource type="AudioStream" uid="uid://cyefa6ng75b78" path="res://Audio/shield_equipped_sound.mp3" id="11_uoycg"]
[ext_resource type="Texture2D" uid="uid://b8jemwubh2kiv" path="res://Assets/background.webp" id="13_ev0hq"]
[ext_resource type="Script" path="res://Game/powerupbar.gd" id="16_m32op"]
[ext_resource type="Texture2D" uid="uid://kc0ba0vyoyns" path="res://Assets/bomb.png" id="16_wsgy0"]
[ext_resource type="Texture2D" uid="uid://1ix48rdwsgsd" path="res://Assets/magnet.png" id="17_fddr1"]
[ext_resource type="Texture2D" uid="uid://bjdngcql3tnf5" path="res://Assets/shield.webp" id="20_3ypbh"]
[ext_resource type="Texture2D" uid="uid://ca5qikxys3dn4" path="res://Heart/heart_blue.png" id="20_gcngg"]
[ext_resource type="Texture2D" uid="uid://c60n48orfy08j" path="res://Assets/shield_use.png" id="21_yw0x1"]

[node name="Game" type="Node2D"]
script = ExtResource("1_obbnp")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_rw7ox")
volume_db = -25.0

[node name="ScoreUpSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_p1ixt")
volume_db = -5.0

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_aoobe")
volume_db = -15.0

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_m5cty")
volume_db = -7.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7xd05")
volume_db = -4.0

[node name="BombSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_kg4gt")
volume_db = -7.0

[node name="MagnetSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_8ufed")
volume_db = -5.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_gtxke")
volume_db = -12.0

[node name="PowerupCollectedSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_8kg18")
volume_db = -10.0

[node name="PopSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_iryfq")
volume_db = -5.0

[node name="ShieldEquippedSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_uoycg")
volume_db = -10.0

[node name="Background" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1024.0
offset_bottom = 1793.0
texture = ExtResource("13_ev0hq")

[node name="StreakLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 421.0
offset_top = 12.0
offset_right = 710.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.94902, 0.419608, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 80
text = "STREAK"

[node name="StreakAmountLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 855.0
offset_top = 12.0
offset_right = 1088.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.94902, 0.419608, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 80
text = "0"

[node name="StreakLogoImage" type="Sprite2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(783, 70)
scale = Vector2(0.444525, 0.444525)
texture = ExtResource("9_ufqww")

[node name="ScoreLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 12.0
offset_right = 339.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.94902, 0.419608, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 80
text = "0"

[node name="TopLeftCorner" type="Marker2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(6.10352e-05, 95.0001)

[node name="TopRightCorner" type="Marker2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(1024, 106)

[node name="Spawner" type="Node2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(0, 95)
script = ExtResource("3_rhkor")

[node name="LogoSpawnTimer" type="Timer" parent="Background/Spawner"]
unique_name_in_owner = true
autostart = true

[node name="Player" parent="Background" instance=ExtResource("1_ivq1u")]
unique_name_in_owner = true
position = Vector2(528, 1058)
scale = Vector2(0.49186, 0.49186)

[node name="PowerupBar" type="Node2D" parent="Background/Player"]
unique_name_in_owner = true
script = ExtResource("16_m32op")

[node name="Bomb" type="Sprite2D" parent="Background/Player/PowerupBar"]
unique_name_in_owner = true
position = Vector2(-166.714, -443.216)
scale = Vector2(0.843456, 0.843456)
texture = ExtResource("16_wsgy0")

[node name="Magnet" type="Sprite2D" parent="Background/Player/PowerupBar"]
unique_name_in_owner = true
position = Vector2(-8.13234, -479.811)
scale = Vector2(0.80336, 0.80336)
texture = ExtResource("17_fddr1")

[node name="Shield" type="Sprite2D" parent="Background/Player/PowerupBar"]
unique_name_in_owner = true
position = Vector2(146.383, -435.083)
scale = Vector2(0.212102, 0.212102)
texture = ExtResource("20_3ypbh")

[node name="ShieldTimer" type="Timer" parent="Background/Player"]
unique_name_in_owner = true

[node name="PlayerShield" type="Sprite2D" parent="Background/Player"]
unique_name_in_owner = true
position = Vector2(8.13245, -176.879)
scale = Vector2(3.24025, 3.24025)
texture = ExtResource("21_yw0x1")

[node name="Heart" type="Sprite2D" parent="Background/Player/PlayerShield"]
position = Vector2(-59.9801, 27.8607)
scale = Vector2(0.161029, 0.161029)
texture = ExtResource("20_gcngg")

[node name="HealthBar" type="HBoxContainer" parent="Background/Player"]
unique_name_in_owner = true
offset_left = -119.953
offset_top = -4.06604
offset_right = 146.047
offset_bottom = 90.934
scale = Vector2(1.00415, 1.00415)
script = ExtResource("4_7h0ba")

[node name="Heart" type="Sprite2D" parent="Background/Player/HealthBar"]
unique_name_in_owner = true
position = Vector2(43.1855, 51.0373)
scale = Vector2(0.287402, 0.287402)
texture = ExtResource("11_pg71m")

[node name="Heart2" type="Sprite2D" parent="Background/Player/HealthBar"]
unique_name_in_owner = true
position = Vector2(130.865, 51.0373)
scale = Vector2(0.287402, 0.287402)
texture = ExtResource("11_pg71m")

[node name="Heart3" type="Sprite2D" parent="Background/Player/HealthBar"]
unique_name_in_owner = true
position = Vector2(218.545, 52.346)
scale = Vector2(0.287402, 0.287402)
texture = ExtResource("11_pg71m")

[connection signal="timeout" from="Background/Spawner/LogoSpawnTimer" to="Background/Spawner" method="_on_logo_spawn_timer_timeout"]
